     handling. (#324970)

   * "bzr push" now also works when creating new branches. "bzr svn-push" 
     has been removed. This requires a patched version of bzr. (#127945)

   * Fixed memory usage and performance bug while iterating over a repository.
     (#318993)

   * When following prefixes, cope with branches copied from outside of the 
     prefix. (#325428)

  FEATURES

   * Set svn:original-date property when revision properties can be committed.

   * Add transport speed progress indication. (require subvertpy >= 0.6.4)

   * New cache that stores the most important metadata information used 
     when browsing history. 

bzr-svn 0.5.0					2009-02-03

  BUG FIXES

   * Fixed two assertions that were always true. (#323305)

   * Fixed handling of round-tripped revisions in svn-upgrade. (#320113)

   * Fixed handling of password prompting with username specified. (#275953)

   * Use most appropriate mapping when setting tags for a branch. (#322856)

   * Fixed handling of branch roots moving. (#295416)

  FEATURES

   * Added "bzr check" on Subversion repositories that checks 
     bzr-svn metadata. (#320929)

   * Allow overriding over revision-properties on a per-branch basis. (#319819)

   * Added --idmap-file option to svn-upgrade. 

bzr-svn 0.5.0~rc2				2009-01-30

  BUG FIXES

   * Install subvertpy as separate module rather than as part of 
     bzrlib.plugins.svn. (#306145)

   * Fix some tests when running overall bzr testsuite. (#306158)

   * Handle duplicate forward slashes in the path part of a URL. 

   * Pass utf-8 connect string to sqlite3() connect function. (#262923)

   * Fix pushing to repositories not allowing the setting of revision 
     properties.

   * Deal with newly appearing file ids correctly in dpush(). (#300979)

   * Fix handling of custom layouts, which used unicode internally. (#306629)

   * Fix pointless commits when using roundtripping using revision 
     properties. (#299943)
